--- a/css/global.css
+++ b/css/global.css
@@ -64,7 +64,6 @@ hr {
     flex-direction: column;
     align-self: center;
 
-    min-height: 100vh;
     color: white;
     row-gap: 2vh;
 }
@@ -97,7 +96,7 @@ hr {
         width: 60%;
     }
     #main-content {
-        margin: 1em 1em;
+        margin: 1em;
     }
 }
 
